fix(sy-topnav): call improved invalidate action

--- a/app/components/sy-topnav/template.hbs
+++ b/app/components/sy-topnav/template.hbs
@@ -65,7 +65,7 @@
         </LinkTo>
       </li>
       <li class="nav-top-list-item">
-        <a href="#" data-test-logout {{on "click" (optional this.on-logout)}}>
+        <a href="#" data-test-logout {{on "click" (optional @onLogout)}}>
           <FaIcon @icon="power-off" @prefix="fas" />
           Logout
         </a>
