fix(font-awesome): change default icon set to regular icons
The regular set is thinner in comparison to the solid set, which
is closer to the previously used icon set. Therefore we have to
add the special prefix to icons which are not available in the
regular icon set but which are already used in the app.

--- a/app/components/attendance-slider/template.hbs
+++ b/app/components/attendance-slider/template.hbs
@@ -28,7 +28,7 @@
   <div class="slider-title">
     <span>{{this.duration}}</span>
     <FaIcon
-      @icon="trash"
+      @icon="trash-can"
       data-test-delete-attendance="true"
       {{on "click" (perform this.delete)}}
     />
