--- a/app/components/report-review-warning/template.hbs
+++ b/app/components/report-review-warning/template.hbs
@@ -18,7 +18,7 @@
         notBillable=""
       }}
     >
-      <FaIcon @icon="exclamation-triangle" />
+      <FaIcon @icon="exclamation-triangle" @prefix="fas" />
       {{this.unverifiedReports.amountReports}}
     </LinkTo>
   </li>
