--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -6,7 +6,7 @@
   {{else if @data.last.isError}}
     <div class="empty">
       <div>
-        <FaIcon @icon="bolt" />
+        <FaIcon @icon="bolt" @prefix="fas" />
         <h3>Oops... Something went wrong</h3>
         <p>
           Have you tried turning it off and on again?
