--- a/app/components/async-list/template.hbs
+++ b/app/components/async-list/template.hbs
@@ -5,19 +5,19 @@
 {{else if this.data.last.isError}}
   <div class="empty">
     <div>
-      <FaIcon @icon="bolt" />
+      <FaIcon @icon="bolt" @prefix="fas" />
       <h3>Oops... Something went wrong</h3>
       <p>
         Have you tried turning it off and on again?
-        <br>
+        <br />
         Please try refreshing the page.
       </p>
     </div>
   </div>
 {{else if (not this.data.last.value.length)}}
   <div class="empty">
-    {{yield 'empty' this.data.last.value}}
+    {{yield "empty" this.data.last.value}}
   </div>
 {{else}}
-  {{yield 'body' this.data.last.value}}
+  {{yield "body" this.data.last.value}}
 {{/if}}
