--- a/app/components/progress-tooltip/template.hbs
+++ b/app/components/progress-tooltip/template.hbs
@@ -15,6 +15,7 @@
           <span class="badge badge--{{this.colorTotal}}">
             {{#if (gt this.progressTotal 1)}}<FaIcon
                 @icon="exclamation-triangle"
+                @prefix="fas"
               />
             {{/if}}
             {{round (mult 100 this.progressTotal)}}%
@@ -29,6 +30,7 @@
           <span class="badge badge--{{this.colorBillable}}">
             {{#if (gt this.progressBillable 1)}}<FaIcon
                 @icon="exclamation-triangle"
+                @prefix="fas"
               />
             {{/if}}
             {{round (mult 100 this.progressBillable)}}%
@@ -49,6 +51,7 @@
             <span class="badge badge--{{this.colorRemainingEffort}}">
               {{#if (gt this.progressRemainingEffort 1)}}<FaIcon
                   @icon="exclamation-triangle"
+                  @prefix="fas"
                 />
               {{/if}}
               {{round (mult 100 this.progressRemainingEffort)}}%
