--- a/app/index/attendances/template.hbs
+++ b/app/index/attendances/template.hbs
@@ -44,7 +44,7 @@
                     type="button"
                     class="btn btn-danger"
                     {{on "click" (fn this.deleteAttendance model)}}
-                  ><FaIcon @icon="trash" /></button>
+                  ><FaIcon @icon="trash-can" /></button>
                   <button
                     type="submit"
                     class="btn btn-primary"
