--- a/app/styles/analysis.scss
+++ b/app/styles/analysis.scss
@@ -25,7 +25,7 @@
   &:nth-child(4),
   &:nth-child(5),
   &:nth-child(6) {
-    width: 11%;
+    width: 10%;
   }
 
   &:nth-child(8) {
@@ -34,12 +34,13 @@
 
   &:nth-child(9),
   &:nth-child(10),
-  &:nth-child(11){
-    width: 6%;
+  &:nth-child(11),
+  &:nth-child(12) {
+    width: 5%;
   }
 
   &:nth-child(7) {
-    width: 20%;
+    width: 21%;
   }
 }
 
@@ -50,7 +51,7 @@
 
 .analysis-scrollable-container::after,
 .analysis-scrollable-container::before {
-  content: '';
+  content: "";
   position: absolute;
   z-index: 1;
   left: 0;
