--- a/app/components/filter-sidebar/group/template.hbs
+++ b/app/components/filter-sidebar/group/template.hbs
@@ -1,7 +1,11 @@
 {{!template-lint-disable no-invalid-interactive}}
 <div class="filter-sidebar-group-label" {{on "click" (toggle "expanded" this)}}>
   {{label}}
-  <FaIcon @icon="angle-right" @transform="{{if this.expanded 'rotate-90'}}" />
+  <FaIcon
+    @icon="angle-right"
+    @prefix="fas"
+    @transform="{{if this.expanded 'rotate-90'}}"
+  />
 </div>
 
 <div class="filter-sidebar-group-body">
