--- a/app/components/filter-sidebar/template.hbs
+++ b/app/components/filter-sidebar/template.hbs
@@ -33,7 +33,7 @@
     >
       <span class="filter-sidebar-toggle-background"></span>
       <span class="filter-sidebar-toggle-icon">
-        <FaIcon @icon="sliders-h" @prefix="fas" />
+        <FaIcon @icon="sliders" @prefix="fas" />
         {{#if @appliedCount}}
           <span
             class="filter-sidebar-toggle-icon-badge"
