--- a/app/components/no-permission/template.hbs
+++ b/app/components/no-permission/template.hbs
@@ -1,5 +1,5 @@
 <div>
-  <FaIcon @icon="hand-paper-o" />
+  <FaIcon @icon="hand" />
   <h3>Halt!</h3>
   <p>
     You are not supposed to be here...<br />
