--- a/app/no-access/template.hbs
+++ b/app/no-access/template.hbs
@@ -1,6 +1,6 @@
 <div class="empty">
   <div>
-    <FaIcon @icon="ban" />
+    <FaIcon @icon="ban" @prefix="fas" />
     <h3>You do not have permission to access Timed.</h3>
   </div>
 </div>
