--- a/app/projects/template.hbs
+++ b/app/projects/template.hbs
@@ -217,7 +217,7 @@
     {{else}}
       <div class="empty" data-test-none-selected>
         <div>
-          <FaIcon @icon="search" />
+          <FaIcon @icon="magnifying-glass" @prefix="fas" />
           <h3>Please select a customer and a project</h3>
         </div>
       </div>
