--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -316,7 +316,7 @@ strong {
   justify-content: center;
   text-align: center;
 
-  .fa {
+  .svg-inline--fa {
     margin-bottom: 1rem;
     font-size: 10rem;
     color: $color-border;
