--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -53,7 +53,11 @@
           @title="Remaining estimated effort"
         ><span class="fa-layers fa-fw color-secondary">
             <FaIcon @icon="clock" />
-            <FaIcon @icon="plus" @transform="shrink-6 right-10 up-6" />
+            <FaIcon
+              @icon="plus"
+              @prefix="fas"
+              @transform="shrink-6 right-10 up-6"
+            />
           </span>
         </SyDurationpicker>
       </div>
@@ -66,26 +70,28 @@
           data-test-report-review
           @disabled={{(not this.editable)}}
           @hint="Needs review"
-          @icon="eye"
           @onToggle={{toggle "review" cs}}
           @value={{cs.review}}
         >
           <span class="fa-layers fa-fw">
             <FaIcon @icon="user" />
-            <FaIcon @icon="question" @transform="shrink-6 up-7 right-8" />
+            <FaIcon
+              @icon="question"
+              @prefix="fas"
+              @transform="shrink-6 up-7 right-8"
+            />
           </span>
         </SyToggle>
         <SyToggle
           data-test-report-not-billable
           @disabled={{(not this.editable)}}
           @hint="Not billable"
-          @icon="dollar"
           @onToggle={{toggle "notBillable" cs}}
           @value={{cs.notBillable}}
         >
           <span class="fa-layers fa-fw">
-            <FaIcon @icon="dollar" />
-            <FaIcon @icon="slash" />
+            <FaIcon @icon="dollar-sign" />
+            <FaIcon @icon="slash" @prefix="fas" />
           </span>
         </SyToggle>
       </div>
@@ -125,7 +131,7 @@
           class="btn btn-primary"
           disabled={{or (not cs.isDirty) (not cs.isValid)}}
           {{on "click" (prevent-default (fn (optional @onSave) cs))}}
-        ><FaIcon @icon="save" /></button>
+        ><FaIcon @icon="floppy-disk" /></button>
       {{/if}}
     </div>
   </form>
