--- a/app/index/activities/template.hbs
+++ b/app/index/activities/template.hbs
@@ -18,6 +18,7 @@
       <table class="table table--striped table--activities">
         <tbody>
           {{#each this.sortedActivities as |activity|}}
+            {{!template-lint-disable no-invalid-interactive}}
             <tr
               title={{unless activity.transferred "Click to edit"}}
               data-test-activity-row
@@ -76,7 +77,7 @@
                     class="btn btn-danger"
                     {{on "click" (fn this.stopActivity activity)}}
                   >
-                    <FaIcon @icon="stop" />
+                    <FaIcon @icon="stop" @prefix="fas" />
                   </button>
                 {{else}}
                   <button
@@ -85,7 +86,7 @@
                     class="btn btn-success"
                     {{on "click" (fn this.startActivity activity)}}
                   >
-                    <FaIcon @icon="play" />
+                    <FaIcon @icon="play" @prefix="fas" />
                   </button>
                 {{/if}}
               </td>
