--- a/app/index/attendances/template.hbs
+++ b/app/index/attendances/template.hbs
@@ -50,7 +50,7 @@
                     class="btn btn-primary"
                     disabled={{not (and model.isDirty model.isValid)}}
                     {{on "click" (fn this.saveAttendance model)}}
-                  ><FaIcon @icon="save" /></button>
+                  ><FaIcon @icon="floppy-disk" /></button>
                 </td>
               </tr>
             {{/let}}
