--- a/app/components/sy-durationpicker-day/template.hbs
+++ b/app/components/sy-durationpicker-day/template.hbs
@@ -3,7 +3,7 @@
   aria-label="day picker"
   name="duration-day"
   type="text"
-  class="form-control"
+  class="duration-day form-control"
   pattern={{this.pattern}}
   value={{this.displayValue}}
   maxlength={{this.maxlength}}
