--- a/app/components/sy-durationpicker/template.hbs
+++ b/app/components/sy-durationpicker/template.hbs
@@ -1,6 +1,7 @@
 {{#if (has-block)}}
   <div
     class="form-control extendend-durationpicker-day"
+    title={{@title}}
     {{!template-lint-disable no-invalid-interactive}}
     {{on "click" this.focusInput}}
   >
