style: move legacy adcssy styles to separate scss file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,4 +1,5 @@
 /* AdCSSy variables */
+@import "adcssy"; /* TODO: Pick only relevant styles and delete duplicate color variables */
 @import "variables";
 
 /* Plugin customizations */
