fix(report-row): move logic to component
* additionally fix test assertion after layout simplification

--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -3,7 +3,7 @@
     <TaskSelection
       @disabled={{not this.editable}}
       @task={{cs.task}}
-      @on-set-task={{queue (fn (mut cs.task)) (fn this.syncRemainingEffort cs)}}
+      @on-set-task={{(fn this.updateTask cs)}}
       as |t|
     >
       <div
