fix(sy-toggle): make on click handler optional
* optional on click handler respecting disabled state
* improve hint for disabled state

--- a/app/components/sy-toggle/template.hbs
+++ b/app/components/sy-toggle/template.hbs
@@ -1,10 +1,10 @@
 <div
   ...attributes
   class="sy-toggle {{if @value 'active' 'inactive'}}"
-  title={{@hint}}
+  title={{concat @hint (if @disabled " (disabled)")}}
   tabindex="0"
   role="button"
-  {{on "click" (unless @disabled (fn (optional @onToggle)))}}
+  {{on "click" (optional (unless @disabled (fn (optional @onToggle))))}}
 >
   {{#if (has-block)}}
     {{yield}}
