fix: minor syntax improvements

--- a/app/components/report-row/template.hbs
+++ b/app/components/report-row/template.hbs
@@ -51,7 +51,8 @@
           @value={{cs.remainingEffort}}
           @onChange={{fn (mut cs.remainingEffort)}}
           @title="Remaining estimated effort"
-        ><span class="fa-layers fa-fw color-secondary">
+        >
+          <span class="fa-layers fa-fw color-secondary">
             <FaIcon @icon="clock" />
             <FaIcon
               @icon="plus"
