fix(analysis): attribute access on template

--- a/app/analysis/edit/template.hbs
+++ b/app/analysis/edit/template.hbs
@@ -168,7 +168,7 @@
                       }}
                     >
                       Reject report
-                      {{#if (eq model.reject null)}}
+                      {{#if (eq model.rejected null)}}
                         <NotIdenticalWarning />
                       {{/if}}
                       {{#if (not (eq f.model.rejected model.rejected))}}
