--- a/app/components/statistic-list/template.hbs
+++ b/app/components/statistic-list/template.hbs
@@ -73,8 +73,8 @@
               as |allotted|
             }}
               <StatisticList::Bar
-                @value={{(div row.duration this.maxDuration)}}
-                @remaining={{(div allotted this.maxDuration)}}
+                @value={{div row.duration this.maxDuration}}
+                @remaining={{div allotted this.maxDuration}}
                 @goal={{min "0.99" (div row.estimatedTime this.maxDuration)}}
               />
             {{/let}}
